fixed spacing issues with form

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ html {
   font-family: Lato;
   display: grid;
   grid-template-rows: 6rem calc(80vh - 6rem);
-  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(6, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
+  grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(6, [col-start] minmax(min-content, 15rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];
 }
 
 h1 {
@@ -95,10 +95,24 @@ h1 {
 
 .intro__details {
   grid-column: 3 / center-end;
-  margin-left: 4rem;
+  margin-left: 6rem;
+}
+
+.intro__about {
   text-align: left;
   font-size: 3rem;
   font-weight: lighter;
+  margin-bottom: 2rem;
+}
+
+.intro__links {
+  display: flex; 
+}
+
+.intro__button {
+  font-size: 1.5rem;
+  margin-right: 1.5rem;
+  color: turquoise;
 }
 
 .section__headline {
@@ -153,16 +167,24 @@ h1 {
 }
 
 .project__details {
+  font-size: 1.2rem;
+  font-weight: 500;
+  line-height: 1.7rem;
   text-align: left;
   margin: 0 1.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: auto;
 }
 
 .project__tech {
-  margin: .5rem 1.5rem;
+  margin: 2rem 1.5rem;
+  margin-top: 1.5rem;
   padding: 1rem 0;
-  font-weight: bold;
+
+  font-size: 1.2rem;
+  font-weight: 900;
+  text-transform: uppercase;
   text-align: center;
+
   color: turquoise;
   border-top: 1px solid lightgray;
   border-bottom: 1px solid lightgray;
@@ -174,7 +196,6 @@ h1 {
   height: 3rem;
   width: 70%;
   margin-bottom: 2rem;
-  margin-top: 1rem;
   align-self: center;
 }
 
@@ -198,21 +219,31 @@ h1 {
   color: white;
   margin-bottom: 4rem;
   display: flex;
+  flex-direction: column;
+}
+
+.contact__label {
+  font-size: 1.2rem;
+  font-family: inherit;
+  margin-left: 2rem;
+  margin-bottom: .4rem;
+  display: block;
+  transition: all .3s;
 }
 
 .contact__input {
+  width: 100%;
   font-size: 1.5rem;
   font-family: inherit;
   padding: 1.5rem 2rem;
   margin-bottom: 1rem;
-  border-radius: 2px;
+  border-radius: 4px;
   border: none;
   transition: all .3s;
 }
-
+/* 
 .contact__input:focus {
   outline: none;
-  box-shadow: 0 1rem 2rem rgba(black, .1);
   border-bottom: 3px solid darkturquoise
 }
 
@@ -230,13 +261,7 @@ h1 {
   transform: translateY(-2rem);
 }
 
-.contact__label {
-  font-size: 1.2rem;
-  margin-left: 2rem;
-  margin-top: .7rem;
-  display: block;
-  transition: all .3s;
-}
+ */
 
 .bg--green {
   background-color: turquoise;
